Closes-Bug: #1569606, Closes-Bug: #1573825,
- Added styles to show scrollbar for left menu
- Fixed dropdown and combobox width issue
- Removed async: false for combobox
- Code cleanup

--- a/webroot/css/contrail.theme.layout.css
+++ b/webroot/css/contrail.theme.layout.css
@@ -402,9 +402,12 @@ li [class*=" icon-"],
   width: auto;
 }
 .nav-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    height: 91%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 .nav-list > li > a,
 .nav-list .nav-header {
@@ -713,6 +716,10 @@ li [class*=" icon-"],
 #sidebar.menu-min + #main-content #breadcrumbs.fixed {
   left: 43px;
 }
+.menu-min .nav-list {
+     height: inherit;
+     overflow: inherit;
+ }
 .menu-min .nav-list > li > a {
   position: relative;
 }
@@ -722,8 +729,8 @@ li [class*=" icon-"],
   left: 42px;
   top: -2px;
   width: 163px;
-  height: 39px;
-  line-height: 38px;
+  height: 35px;
+  line-height: 35px;
   background-color: #f5f5f5;
   z-index: 121;
   border: 1px solid #cccccc;
